# serializer version: 1
# name: test_copy_throws_error_for_same_platform_operation[@snow/stage-@stage/snow]
  '''
  +- Error ----------------------------------------------------------------------+
  | Both source and target path are remote. This operation is not supported.     |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_copy_throws_error_for_same_platform_operation[local/path-other/local/path]
  '''
  +- Error ----------------------------------------------------------------------+
  | Both source and target path are local. This operation is not supported.      |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_copy_throws_error_for_same_platform_operation[snow://stage-snow://stage/snow]
  '''
  +- Error ----------------------------------------------------------------------+
  | Both source and target path are remote. This operation is not supported.     |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_execute[@DB.SCHEMA.EXE/s1.sql-@DB.SCHEMA.EXE-expected_files19]
  '''
  SUCCESS - @DB.SCHEMA.EXE/s1.sql
  +-----------------------------------------+
  | File                  | Status  | Error |
  |-----------------------+---------+-------|
  | @DB.SCHEMA.EXE/s1.sql | SUCCESS | None  |
  +-----------------------------------------+
  
  '''
# ---
# name: test_execute[@DB.SCHEMA.EXE/s1.sql-@db.schema.exe-expected_files19]
  '''
  SUCCESS - @db.schema.exe/s1.sql
  +-----------------------------------------+
  | File                  | Status  | Error |
  |-----------------------+---------+-------|
  | @db.schema.exe/s1.sql | SUCCESS | None  |
  +-----------------------------------------+
  
  '''
# ---
# name: test_execute[@DB.schema.EXE/a/S3.sql-@DB.schema.EXE-expected_files20]
  '''
  SUCCESS - @DB.schema.EXE/a/S3.sql
  +-------------------------------------------+
  | File                    | Status  | Error |
  |-------------------------+---------+-------|
  | @DB.schema.EXE/a/S3.sql | SUCCESS | None  |
  +-------------------------------------------+
  
  '''
# ---
# name: test_execute[@DB.schema.EXE/a/S3.sql-@db.schema.exe-expected_files20]
  '''
  SUCCESS - @db.schema.exe/a/S3.sql
  +-------------------------------------------+
  | File                    | Status  | Error |
  |-------------------------+---------+-------|
  | @db.schema.exe/a/S3.sql | SUCCESS | None  |
  +-------------------------------------------+
  
  '''
# ---
# name: test_execute[@db.schema.exe-@db.schema.exe-expected_files15]
  '''
  SUCCESS - @db.schema.exe/s1.sql
  SUCCESS - @db.schema.exe/a/S3.sql
  SUCCESS - @db.schema.exe/a/b/s4.sql
  +---------------------------------------------+
  | File                      | Status  | Error |
  |---------------------------+---------+-------|
  | @db.schema.exe/s1.sql     | SUCCESS | None  |
  | @db.schema.exe/a/S3.sql   | SUCCESS | None  |
  | @db.schema.exe/a/b/s4.sql | SUCCESS | None  |
  +---------------------------------------------+
  
  '''
# ---
# name: test_execute[@db.schema.exe/a/S3.sql-@db.schema.exe-expected_files18]
  '''
  SUCCESS - @db.schema.exe/a/S3.sql
  +-------------------------------------------+
  | File                    | Status  | Error |
  |-------------------------+---------+-------|
  | @db.schema.exe/a/S3.sql | SUCCESS | None  |
  +-------------------------------------------+
  
  '''
# ---
# name: test_execute[@db.schema.exe/s1.sql-@db.schema.exe-expected_files17]
  '''
  SUCCESS - @db.schema.exe/s1.sql
  +-----------------------------------------+
  | File                  | Status  | Error |
  |-----------------------+---------+-------|
  | @db.schema.exe/s1.sql | SUCCESS | None  |
  +-----------------------------------------+
  
  '''
# ---
# name: test_execute[@exe-@exe-expected_files0]
  '''
  SUCCESS - @exe/s1.sql
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/s1.sql     | SUCCESS | None  |
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[db.schema.exe-@db.schema.exe-expected_files16]
  '''
  SUCCESS - @db.schema.exe/s1.sql
  SUCCESS - @db.schema.exe/a/S3.sql
  SUCCESS - @db.schema.exe/a/b/s4.sql
  +---------------------------------------------+
  | File                      | Status  | Error |
  |---------------------------+---------+-------|
  | @db.schema.exe/s1.sql     | SUCCESS | None  |
  | @db.schema.exe/a/S3.sql   | SUCCESS | None  |
  | @db.schema.exe/a/b/s4.sql | SUCCESS | None  |
  +---------------------------------------------+
  
  '''
# ---
# name: test_execute[exe-@exe-expected_files1]
  '''
  SUCCESS - @exe/s1.sql
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/s1.sql     | SUCCESS | None  |
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/*-@exe-expected_files3]
  '''
  SUCCESS - @exe/s1.sql
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/s1.sql     | SUCCESS | None  |
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/*.sql-@exe-expected_files4]
  '''
  SUCCESS - @exe/s1.sql
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/s1.sql     | SUCCESS | None  |
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/-@exe-expected_files2]
  '''
  SUCCESS - @exe/s1.sql
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/s1.sql     | SUCCESS | None  |
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a-@exe-expected_files5]
  '''
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/*-@exe-expected_files7]
  '''
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/*.sql-@exe-expected_files8]
  '''
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/-@exe-expected_files6]
  '''
  SUCCESS - @exe/a/S3.sql
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/S3.sql   | SUCCESS | None  |
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/b-@exe-expected_files9]
  '''
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/b/*-@exe-expected_files11]
  '''
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/b/*.sql-@exe-expected_files12]
  '''
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/a/b/-@exe-expected_files10]
  '''
  SUCCESS - @exe/a/b/s4.sql
  +-----------------------------------+
  | File            | Status  | Error |
  |-----------------+---------+-------|
  | @exe/a/b/s4.sql | SUCCESS | None  |
  +-----------------------------------+
  
  '''
# ---
# name: test_execute[exe/s1.sql-@exe-expected_files14]
  '''
  SUCCESS - @exe/s1.sql
  +-------------------------------+
  | File        | Status  | Error |
  |-------------+---------+-------|
  | @exe/s1.sql | SUCCESS | None  |
  +-------------------------------+
  
  '''
# ---
# name: test_execute[exe/s?.sql-@exe-expected_files13]
  '''
  SUCCESS - @exe/s1.sql
  +-------------------------------+
  | File        | Status  | Error |
  |-------------+---------+-------|
  | @exe/s1.sql | SUCCESS | None  |
  +-------------------------------+
  
  '''
# ---
# name: test_execute_continue_on_error
  '''
  SUCCESS - @exe/p1.py
  FAILURE - @exe/p2.py
  SUCCESS - @exe/s1.sql
  FAILURE - @exe/s2.sql
  SUCCESS - @exe/s3.sql
  +------------------------------------+
  | File        | Status  | Error      |
  |-------------+---------+------------|
  | @exe/p1.py  | SUCCESS | None       |
  | @exe/p2.py  | FAILURE | Test error |
  | @exe/s1.sql | SUCCESS | None       |
  | @exe/s2.sql | FAILURE | Error      |
  | @exe/s3.sql | SUCCESS | None       |
  +------------------------------------+
  
  '''
# ---
# name: test_execute_from_user_stage[@~-expected_files0]
  '''
  SUCCESS - @~/s1.sql
  SUCCESS - @~/a/s3.sql
  SUCCESS - @~/a/b/s4.sql
  +---------------------------------+
  | File          | Status  | Error |
  |---------------+---------+-------|
  | @~/s1.sql     | SUCCESS | None  |
  | @~/a/s3.sql   | SUCCESS | None  |
  | @~/a/b/s4.sql | SUCCESS | None  |
  +---------------------------------+
  
  '''
# ---
# name: test_execute_from_user_stage[@~/a-expected_files2]
  '''
  SUCCESS - @~/a/s3.sql
  SUCCESS - @~/a/b/s4.sql
  +---------------------------------+
  | File          | Status  | Error |
  |---------------+---------+-------|
  | @~/a/s3.sql   | SUCCESS | None  |
  | @~/a/b/s4.sql | SUCCESS | None  |
  +---------------------------------+
  
  '''
# ---
# name: test_execute_from_user_stage[@~/a/b-expected_files4]
  '''
  SUCCESS - @~/a/b/s4.sql
  +---------------------------------+
  | File          | Status  | Error |
  |---------------+---------+-------|
  | @~/a/b/s4.sql | SUCCESS | None  |
  +---------------------------------+
  
  '''
# ---
# name: test_execute_from_user_stage[@~/a/s3.sql-expected_files3]
  '''
  SUCCESS - @~/a/s3.sql
  +-------------------------------+
  | File        | Status  | Error |
  |-------------+---------+-------|
  | @~/a/s3.sql | SUCCESS | None  |
  +-------------------------------+
  
  '''
# ---
# name: test_execute_from_user_stage[@~/s1.sql-expected_files1]
  '''
  SUCCESS - @~/s1.sql
  +-----------------------------+
  | File      | Status  | Error |
  |-----------+---------+-------|
  | @~/s1.sql | SUCCESS | None  |
  +-----------------------------+
  
  '''
# ---
# name: test_execute_raise_invalid_file_extension_error
  '''
  +- Error ----------------------------------------------------------------------+
  | Invalid file extension, only .sql, .py files are allowed.                    |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_execute_raise_invalid_variables_error
  '''
  +- Error ----------------------------------------------------------------------+
  | Invalid variable: 'variable'                                                 |
  +------------------------------------------------------------------------------+
  
  '''
# ---
# name: test_stage_print_result_for_get_all_files_from_stage
  '''
  Use `--recursive` flag, which copy files recursively with directory structure. This will be the default behavior in the future.
  +-----------------------------------------+
  | file      | size | status     | message |
  |-----------+------+------------+---------|
  | file1.txt | 10   | DOWNLOADED |         |
  | file2.txt | 10   | DOWNLOADED |         |
  | file3.txt | 10   | DOWNLOADED |         |
  +-----------------------------------------+
  
  '''
# ---
# name: test_stage_print_result_for_get_all_files_from_stage_recursive
  '''
  +-----------------------------------------+
  | file      | size | status     | message |
  |-----------+------+------------+---------|
  | file1.txt | 10   | DOWNLOADED |         |
  | file2.txt | 10   | DOWNLOADED |         |
  | file3.txt | 10   | DOWNLOADED |         |
  +-----------------------------------------+
  
  '''
# ---
# name: test_stage_print_result_for_put_directory
  '''
  +------------------------------------------------------------------------------+
  |         |         |         |         | source_ | target_ |         |        |
  |         |         | source_ | target_ | compres | compres |         | messag |
  | source  | target  | size    | size    | sion    | sion    | status  | e      |
  |---------+---------+---------+---------+---------+---------+---------+--------|
  | file1.t | file1.t | 10      | 8       | NONE    | NONE    | UPLOADE |        |
  | xt      | xt      |         |         |         |         | D       |        |
  | file2.t | file2.t | 10      | 8       | NONE    | NONE    | UPLOADE |        |
  | xt      | xt      |         |         |         |         | D       |        |
  | file3.t | file3.t | 10      | 8       | NONE    | NONE    | UPLOADE |        |
  | xt      | xt      |         |         |         |         | D       |        |
  +------------------------------------------------------------------------------+
  
  '''
# ---
